tests/baselines/reference/privateNameStaticAccessorsCallExpression(strict=true).errors.txt
privateNameStaticAccessorsCallExpression.ts(3,49): error TS7006: Parameter 'a' implicitly has an 'any' type.
privateNameStaticAccessorsCallExpression.ts(3,52): error TS7019: Rest parameter 'b' implicitly has an 'any[]' type.
privateNameStaticAccessorsCallExpression.ts(9,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
privateNameStaticAccessorsCallExpression.ts(13,19): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== privateNameStaticAccessorsCallExpression.ts (4 errors) ====
    class A {
        static get #fieldFunc() {  return function() { A.#x = 10; } }
        static get #fieldFunc2() { return  function(a, ...b) {}; }
                                                    ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                                                       ~~~~
!!! error TS7019: Rest parameter 'b' implicitly has an 'any[]' type.
        static #x = 1;
        static test() {
            this.#fieldFunc();
            const func = this.#fieldFunc;
            func();
            new this.#fieldFunc();
            ~~~~~~~~~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    
            const arr = [ 1, 2 ];
            this.#fieldFunc2(0, ...arr, 3);
            const b = new this.#fieldFunc2(0, ...arr, 3);
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
            const str = this.#fieldFunc2`head${1}middle${2}tail`;
            this.getClass().#fieldFunc2`test${1}and${2}`;
        }
        static getClass() { return A; }
    }